--- a/Youtube Old Layout.css
+++ b/Youtube Old Layout.css
@@ -10,13 +10,15 @@
 @license        MIT
 @preprocessor   stylus
 
-@advanced checkbox old-dark-theme "Dark Navigation Bars" 0
-@advanced checkbox hide-download-btn "Hide Download Button" 0
-@advanced checkbox hide-clip-btn "Hide Clip Button" 0
-@advanced checkbox hide-thanks-btn "Hide Thanks Button" 0
-@advanced checkbox old-playlist-beta "Old Playlists beta" 0
-@advanced checkbox remove-bg-playlist "Remove Background Playlists" 0
+@advanced checkbox like-dislike-color1 "👍 Enable Custom Like/Dislike Color" 1
+@advanced color like-dislike-color2 "👍 Custom Like/Dislike Color" #3ea6ff
 
+@advanced checkbox old-dark-theme "🌑 Dark Navigation Bars" 0
+@advanced checkbox hide-download-btn "🫣 Hide Download Button" 0
+@advanced checkbox hide-clip-btn "🫣 Hide Clip Button" 0
+@advanced checkbox hide-thanks-btn "🫣 Hide Thanks Button" 0
+@advanced checkbox old-playlist-beta "▶️ Old Playlists beta" 0
+@advanced checkbox remove-bg-playlist "🔎 Remove Background Playlists" 0
 ==/UserStyle== */
 /*
 Support me: https://ko-fi.com/sapondanaisriwan
@@ -27,6 +29,16 @@ Support me: https://ko-fi.com/sapondanaisriwan
         --sub-red-btn: #CC0000;
         --sub-white--text-btn: #F2F2F2;
         --sub-black-bg-btn: #303030;
+    } // custom-like-dislike-color
+    if (like-dislike-color1) {
+        #segmented-like-button button[aria-pressed="true"] yt-icon * {
+            fill: like-dislike-color2 !important;
+            stroke: none;
+        }
+
+        #segmented-dislike-button button[aria-pressed="true"] yt-icon {
+            fill: like-dislike-color2 !important;
+        }
     }
 
     if(hide-download-btn) {
@@ -215,7 +227,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         background: var(--sub-red-btn) !important;
         background-color: var(--sub-red-btn) !important;
     }
-    
+
     /* Remove background color*/
     .yt-simple-endpoint.style-scope.ytd-subscription-notification-toggle-button-renderer yt-icon-button {
         background-color: transparent !important;
@@ -277,7 +289,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
         border-radius: 0 !important;
     } // Remove border around Live chat
     ytd-live-chat-frame[rounded-container],
-    ytd-live-chat-frame[rounded-container] #show-hide-button.ytd-live-chat-frame ytd-toggle-button-renderer.ytd-live-chat-frame {
+    ytd-live-chat-frame[rounded-container] #show-hide-button.ytd-live-chat-frame ytd-toggle-button-renderer.ytd-live-chat-frame,
+    yt-dropdown-menu[modern-dialogs] #menu.yt-dropdown-menu,
+    .dropdown-content.tp-yt-paper-menu-button,
+    #chatframe {
         border-radius: 0 !important;
     } // Remove border around pop up
     ytd-menu-popup-renderer[sheets-refresh],
@@ -301,6 +316,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
         border-radius: 0 !important;
     } // shots
     ytd-reel-player-overlay-renderer #overlay.ytd-reel-player-overlay-renderer {
+        border-radius: 0 !important;
+    } // remove unloaded video thumbnails
+    #home-page-skeleton .rich-thumbnail.rounded-thumbs,
+    #home-container-skeleton .rich-thumbnail.rounded-thumbs:before {
         border-radius: 0 !important;
     }
 
@@ -367,28 +386,13 @@ Support me: https://ko-fi.com/sapondanaisriwan
     .yt-spec-button-shape-next.yt-spec-button-shape-next--text.yt-spec-button-shape-next--icon-only-default,
     .yt-spec-button-shape-next.yt-spec-button-shape-next--tonal.yt-spec-button-shape-next--icon-button {
         background-color: transparent !important;
-    } 
-    
-    // Reply button
-    #reply-button-end ytd-button-renderer button{
-        color: #AAAAAA !important;
-        background: transparent 
-    }
-    
-    #segmented-like-button button[aria-pressed="true"] yt-icon *{
-        fill: red !important
-        stroke: none !important; 
-        // filter: invert(16%) sepia(82%) saturate(7406%) hue-rotate(355deg) brightness(98%) contrast(120%) !important;
-    }
-    
-    #segmented-dislike-button button[aria-pressed="true"] yt-icon{
-        fill: red !important
-        // filter: invert(16%) sepia(82%) saturate(7406%) hue-rotate(355deg) brightness(98%) contrast(120%) !important;
-    }
-    
-    // Join button
+    } // Reply button
+    #reply-button-end ytd-button-renderer yt-button-shape button {
+        color: #AAA !important;
+        background: transparent !important;
+    } // Join button
     yt-button-shape button[aria-label="Join this channel"] {
-        color: #3ea6ff!important
+        color: #3ea6ff!important;
         border: 1px solid #3ea6ff !important;
         padding: 9px 15px !important;
     }
